--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,12 @@ body{
     display: flex;
     height: 100vh;
     width: 100vw;
+    font-size: 1.5rem;
 }
 
 .left{
-    width: 40%;
+    flex-grow: 1;
+    width: 50vw;
     background-image: url(./images/forest.avif);
     background-repeat: no-repeat;
     background-position: center;
@@ -34,4 +36,47 @@ body{
 
 .logo img{
     height: 15vh;
+}
+
+.right{
+    display: flex;
+    width: 60vw;
+    flex-direction: column;
+    justify-content: center;
+    flex-grow: 2;
+    background-color: rgb(240, 240, 240);
+}
+
+.text{
+    font-weight: 700;
+}
+
+.text > *{
+    margin-top: 1rem;
+}
+
+.right > *{
+    padding: 10px;
+}
+
+.right form{
+    background-color: white;
+    box-shadow: 0 5px 5px grey;
+    width: 100%;
+}
+
+input{
+    padding: .2rem;
+}
+
+.inputs{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.input{
+    display: flex;
+    flex-direction: column;
+    width: 40%;
 }
