--- a/styles.css
+++ b/styles.css
@@ -80,3 +80,22 @@ input{
     flex-direction: column;
     width: 40%;
 }
+
+.bottom-right,
+button{
+    font-size: 1.2rem;
+}
+
+button{
+    margin-top: 10px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    color: white;
+    background-color: rgb(3, 65, 3);
+}
+
+a{
+    text-decoration: none;
+    color:rgb(3, 65, 3)
+}
